<?xml version="1.0" encoding="utf-8"?>
<!-- Le Layout une fois que nous sommes connecter, ce layout inclut deux TextView et deux Button pour les redirection -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- Ce TextView est juste un text de bienvenue (il n'a pas d'id) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bonjour"
        android:textColor="@color/tvColor"
        android:textSize="@dimen/tvHeaderSize" />

    <!-- Ce TextView affichera le nom de l'utilisateur, couplé avec celui ci dessus le rendu sera "Bienvenue Cedric" -->
    <TextView
        android:id="@+id/textUserNameConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tvColor"
        android:textSize="@dimen/tvHeaderSize" />

    <!-- Bouton pour aller dans la partie "Envoie de message" -->
    <Button
        android:id="@+id/buttonEnvoyerMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttoncustom"
        android:text="@string/sendMessage"
        android:textColor="@color/btnColor"
        android:textSize="20sp" />

    <!-- Bouton pour aller dans la partie de la reception des messages -->
    <Button
        android:id="@+id/buttonListeMessage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttoncustom"
        android:text="@string/listMessage"
        android:textColor="@color/btnColor"
        android:textSize="20sp" />

</LinearLayout>